--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
     
     <head>
+        <meta http-equiv="Content-Security-Policy" content="font-src 'self' data:; img-src 'self' data:; default-src 'self' http://121.0.0:3000/">
+
         <link rel="stylesheet" type="text/css" href="Vendors/css/normalize.css">
         <link rel="stylesheet" type="text/css" href="Vendors/css/grid.css">
         <link rel="stylesheet" type="text/css" href="Vendors/css/ionicons.min.css" >
